# devanalitics

./: .env.example  .gitignore  CLAUDE.md  bootstrap.sh  docker-compose.yml
bootstrap/: import_kibana.py  import_sortinghat.py  kibana_objects.ndjson  sortinghat_identities.json
conf/: projects.json  setup.cfg  sh_custom_urls.py  sortinghat_settings.py
scripts/: fix-identity-name.sh  run-backfill.sh  run-weekly-sync.sh  stop.sh  sync-names-from-sortinghat.sh  update-after-merge.sh
