[es_collection]
url = http://elasticsearch:9200

[es_enrichment]
url = http://elasticsearch:9200
autorefresh = false

[general]
short_name = devanalitics
update = false
min_update_delay = 10080
logs_dir = /home/user/logs
debug = false

[projects]
projects_file = /home/user/conf/projects.json

[phases]
collection = true
identities = true
enrichment = true
panels = false

# ── Git (commits) ──────────────────────────────────────────────
[git]
raw_index = git_raw
enriched_index = git_enriched
latest-items = true
studies = []

# ── GitHub Pull Requests ────────────────────────────────────────
[github]
raw_index = github_raw
enriched_index = github_enriched
api-token = %(GITHUB_TOKEN)s
sleep-for-rate = true
no-archive = true
category = pull_request
studies = []

# ── GitHub Issues ──────────────────────────────────────────────
[github2]
raw_index = github2_raw
enriched_index = github2_enriched
api-token = %(GITHUB_TOKEN)s
sleep-for-rate = true
no-archive = true
category = issue
studies = []

# ── Identity merging ───────────────────────────────────────────
[sortinghat]
host = sortinghat
port = 8000
path = /identities/api/
ssl = false
user = %(SORTINGHAT_USER)s
password = %(SORTINGHAT_PASSWORD)s
database = sortinghat_db
load_orgs = false
orgs_file =
identities_file = []
affiliate = true
unaffiliated_group = Unknown
autoprofile = [git, github]
matching = [email, name, username]
sleep_for = 10
strict_mapping = false

# ── Kibana / panels ────────────────────────────────────────────
[panels]
kibiter_url = http://kibana:5601
kibiter_time_from = now-2y
kibiter_default_index = git
